# fj

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  prek.toml  pyproject.toml
services/api/: pyproject.toml
services/api/src/api/: __init__.py  app.py  bootstrap.py  container.py  main.py  provider.py
services/api/src/api/shemas/: user.py
services/api/src/api/users/: schemas.py  service.py
services/scheduler/: pyproject.toml
services/scheduler/src/scheduler/: __init__.py
services/worker/: pyproject.toml
services/worker/src/worker/: __init__.py  main.py
