[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.51.0",
    "config",
    "observability",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
